--- a/index.htm
+++ b/index.htm
@@ -3,6 +3,7 @@
   <head>
     <meta charset=utf-8 />
     <title>Philipp Paul Köhler</title>
+    <link href=data:, rel=icon>
     <style type=text/css> body{
       margin:0;
       padding:0;
